ENTMQBR-3183 Fixed replaces in 0.11 csv.

--- a/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
@@ -60,7 +60,7 @@ spec:
     - activemqartemis
     - operator
   version: 0.11.0
-  replaces: activemq-artemis-operator.v0.10.0
+  replaces: activemq-artemis-operator.v0.10.0-on-z
   maturity: alpha
   maintainers:
     - name: Red Hat, Inc.
