NO-JIRA: Added support of Operand forms to 0.11.0 from catalog-source.

--- a/deploy/catalog_resources/catalog-source.yaml
+++ b/deploy/catalog_resources/catalog-source.yaml
@@ -33,52 +33,15 @@ items:
                     },
                     "spec": {
                        "deploymentPlan": {
-                          "size": 1,
+                          "size": 2,
                           "image": "quay.io/artemiscloud/activemq-artemis-openshift-image:latest",
                           "requireLogin": false,
                           "persistenceEnabled": false,
                           "journalType": "nio",
                           "messageMigration": false
-                       },
-                       "console": {
-                          "expose": true
-                       },
-                       "acceptors": [
-                          {
-                             "name": "amqp",
-                             "protocols": "amqp",
-                             "port": 5672,
-                             "sslEnabled": false,
-                             "enabledCipherSuites": "SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA",
-                             "enabledProtocols": "TLSv1,TLSv1.1,TLSv1.2",
-                             "needClientAuth": true,
-                             "wantClientAuth": true,
-                             "verifyHost": true,
-                             "sslProvider": "JDK",
-                             "sniHost": "localhost",
-                             "expose": true,
-                             "anycastPrefix": "jms.topic.",
-                             "multicastPrefix": "/queue/"
-                          }
-                       ],
-                       "connectors": [
-                          {
-                             "name": "connector0",
-                             "host": "localhost",
-                             "port": 22222,
-                             "sslEnabled": false,
-                             "enabledCipherSuites": "SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA",
-                             "enabledProtocols": "TLSv1,TLSv1.1,TLSv1.2",
-                             "needClientAuth": true,
-                             "wantClientAuth": true,
-                             "verifyHost": true,
-                             "sslProvider": "JDK",
-                             "sniHost": "localhost",
-                             "expose": true
-                          }
-                       ]
+                       }
                     }
-                 },
+                },
                 {
                     "apiVersion": "broker.amq.io/v2alpha1",
                     "kind": "ActiveMQArtemisAddress",
@@ -191,12 +154,6 @@ items:
                       x-descriptors:
                         - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
                         - 'urn:alm:descriptor:com.tectonic.ui:text'
-                    - description: If aio use ASYNCIO, if nio use NIO for journal IO
-                      displayName: JournalType
-                      path: deploymentPlan.journalType
-                      x-descriptors:
-                        - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
-                        - 'urn:alm:descriptor:com.tectonic.ui:text'
                     - description: If true require user password login credentials for broker protocol ports
                       displayName: RequireLogin
                       path: deploymentPlan.requireLogin
@@ -209,6 +166,12 @@ items:
                       x-descriptors:
                         - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
                         - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+                    - description: If aio use ASYNCIO, if nio use NIO for journal IO
+                      displayName: JournalType
+                      path: deploymentPlan.journalType
+                      x-descriptors:
+                        - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+                        - 'urn:alm:descriptor:com.tectonic.ui:text'
                     - description: If true migrate messages on scaledown
                       displayName: MessageMigration
                       path: deploymentPlan.messageMigration
@@ -367,7 +330,6 @@ items:
                       x-descriptors:
                         - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
                         - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
-          
                     - description: Tells a client connecting to this connector that 2-way SSL is requested but not required. Overridden by needClientAuth.
                       displayName: Want Client Auth
                       path: connectors[0].wantClientAuth
@@ -413,13 +375,13 @@ items:
                         - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
                     - description: Name of the secret to use for ssl information
                       displayName: Ssl Secret
-                      path: deploymentPlan.sslSecret
+                      path: console.sslSecret
                       x-descriptors:
                         - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
                         - 'urn:alm:descriptor:com.tectonic.ui:text'
                     - description: If the embedded server requires client authentication
                       displayName: Use Client Auth
-                      path: deploymentPlan.useClientAuth
+                      path: console.useClientAuth
                       x-descriptors:
                         - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
                         - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
