--- a/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
@@ -18,12 +18,17 @@ metadata:
           "apiVersion": "broker.amq.io/v2alpha1",
           "kind": "ActiveMQArtemis",
           "metadata": {
-              "name": "ex-aao"
+              "name": "ex-aao",
+              "application": "ex-aao-app"
           },
           "spec": {
               "deploymentPlan": {
-                  "size": 1,
-                  "image": "quay.io/artemiscloud/activemq-artemis-openshift-image:latest"
+                  "size": 2,
+                  "image": "quay.io/artemiscloud/activemq-artemis-openshift-image:latest",
+                  "requireLogin": false,
+                  "persistenceEnabled": false,
+                  "journalType": "nio",
+                  "messageMigration": false
               }
           }
       },
@@ -119,27 +124,265 @@ spec:
           - description: User name for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
             displayName: AdminUser
             path: adminUser
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:AdminUser'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description: Password for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
             displayName: AdminPassword
             path: adminPassword
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:AdminUser'
+              - 'urn:alm:descriptor:com.tectonic.ui:password'
           - description: The number of broker pods to deploy
             displayName: Size
-            path: size
+            path: deploymentPlan.size
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:podCount'
           - description: The image used for the broker deployment
             displayName: Image
-            path: image
+            path: deploymentPlan.image
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description: If true require user password login credentials for broker protocol ports
             displayName: RequireLogin
-            path: requireLogin
+            path: deploymentPlan.requireLogin
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
           - description: If true use persistent volume via persistent volume claim for journal storage
             displayName: PersistenceEnabled
-            path: persistenceEnabled
+            path: deploymentPlan.persistenceEnabled
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
           - description: If aio use ASYNCIO, if nio use NIO for journal IO
             displayName: JournalType
-            path: journalType
+            path: deploymentPlan.journalType
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description: If true migrate messages on scaledown
             displayName: MessageMigration
-            path: messageMigration
+            path: deploymentPlan.messageMigration
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+
+          - description:  A single acceptor configuration
+            displayName: Name
+            path: acceptors[0].name
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Port number
+            displayName: Port
+            path: acceptors[0].port
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - description: The protocols to enable for this acceptor
+            displayName: Protocols
+            path: acceptors[0].protocols
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description:  Whether or not to enable SSL on this port
+            displayName: Ssl Enabled
+            path: acceptors[0].sslEnabled
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Name of the secret to use for ssl information
+            displayName: Ssl Secret
+            path: acceptors[0].sslSecret
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Comma separated list of cipher suites used for SSL communication.
+            displayName: Enabled Cipher Suites
+            path: acceptors[0].enabledCipherSuites
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Comma separated list of protocols used for SSL communication.
+            displayName: Enabled Protocols
+            path: acceptors[0].enabledProtocols
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Tells a client connecting to this acceptor that 2-way SSL is required. This property takes precedence over wantClientAuth.
+            displayName: Need Client Auth
+            path: acceptors[0].needClientAuth
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Tells a client connecting to this acceptor that 2-way SSL is requested but not required. Overridden by needClientAuth.
+            displayName: Want Client Auth
+            path: acceptors[0].wantClientAuth
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: The CN of the connecting client's SSL certificate will be compared to its hostname to verify they match. This is useful only for 2-way SSL.
+            displayName: Verify Host
+            path: acceptors[0].verifyHost
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Used to change the SSL Provider between JDK and OPENSSL. The default is JDK.
+            displayName: Ssl Provider
+            path: acceptors[0].sslProvider
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: A regular expression used to match the server_name extension on incoming SSL connections. If the name doesn't match then the connection to the acceptor will be rejected.
+            displayName: Sni Host
+            path: acceptors[0].sniHost
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Whether or not to expose this acceptor
+            displayName: Expose
+            path: acceptors[0].expose
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: To indicate which kind of routing type to use.
+            displayName: AnyCast Prefix
+            path: acceptors[0].anycastPrefix
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: To indicate which kind of routing type to use
+            displayName: Multicast Prefix
+            path: acceptors[0].multicastPrefix
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: To indicate which kind of routing type to use
+            displayName: Connections Allowed
+            path: acceptors[0].connectionsAllowed
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+
+          - description:  The name of the connector
+            displayName: Name
+            path: connectors[0].name
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: The type either tcp or vm
+            displayName: Type
+            path: connectors[0].type
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description:  Hostname or IP to connect to
+            displayName: Host Name
+            path: connectors[0].host
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Port number
+            displayName: Port
+            path: connectors[0].port
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - description:  Whether or not to enable SSL on this port
+            displayName: Ssl Enabled
+            path: connectors[0].sslEnabled
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Name of the secret to use for ssl information
+            displayName: Ssl Secret
+            path: connectors[0].sslSecret
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Comma separated list of cipher suites used for SSL communication.
+            displayName: Enabled Cipher Suites
+            path: connectors[0].enabledCipherSuites
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Comma separated list of protocols used for SSL communication.
+            displayName: Enabled Protocols
+            path: connectors[0].enabledProtocols
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Tells a client connecting to this connector that 2-way SSL is required. This property takes precedence over wantClientAuth.
+            displayName: Need Client Auth
+            path: connectors[0].needClientAuth
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Tells a client connecting to this connector that 2-way SSL is requested but not required. Overridden by needClientAuth.
+            displayName: Want Client Auth
+            path: connectors[0].wantClientAuth
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: The CN of the connecting client's SSL certificate will be compared to its hostname to verify they match. This is useful only for 2-way SSL.
+            displayName: Verify Host
+            path: connectors[0].verifyHost
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Used to change the SSL Provider between JDK and OPENSSL. The default is JDK.
+            displayName: Ssl Provider
+            path: connectors[0].sslProvider
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: A regular expression used to match the server_name extension on incoming SSL connections. If the name doesn't match then the connection to the acceptor will be rejected.
+            displayName: Sni Host
+            path: connectors[0].sniHost
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Whether or not to expose this connector
+            displayName: Expose
+            path: connectors[0].expose
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:connectors'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+
+          - description: Whether or not to expose this port
+            displayName: Expose
+            path: console.expose
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Whether or not to enable SSL on this port
+            displayName: Ssl Enabled
+            path: console.sslEnabled
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: Name of the secret to use for ssl information
+            displayName: Ssl Secret
+            path: console.sslSecret
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: If the embedded server requires client authentication
+            displayName: Use Client Auth
+            path: console.useClientAuth
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:console'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          statusDescriptors:
+            - description: The current pods
+              displayName: Pods Status
+              path: podStatus
+              x-descriptors:
+                - "urn:alm:descriptor:com.tectonic.ui:podStatuses"
+
       - name: activemqartemisaddresses.broker.amq.io
         version: v2alpha1
         kind: ActiveMQArtemisAddress
@@ -149,12 +392,22 @@ spec:
           - description: The Queue Name
             displayName: Queue Name
             path: queueName
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:ActiveMQArtemis'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description: The Address Name
             displayName: Address Name
             path: addressName
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:ActiveMQArtemis'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description: The Routing Type
             displayName: Routing Type
             path: routingType
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:ActiveMQArtemis'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+
       - name: activemqartemisscaledowns.broker.amq.io
         version: v2alpha1
         kind: ActiveMQArtemisScaledown
@@ -164,6 +417,10 @@ spec:
           - description: Triggered by main ActiveMQArtemis CRD messageMigration entry
             displayName: LocalOnly
             path: localOnly
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:SingleNamespace'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+
   install:
     strategy: deployment
     spec:
