--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: broker.amq.io/v2alpha1
+apiVersion: broker.amq.io/v2alpha2
 kind: ActiveMQArtemis
 metadata:
   name: ex-aao
@@ -43,6 +43,6 @@ spec:
       sniHost: localhost
       expose: true
   upgrades:
-      enabled: true
-      minor: true
+      enabled: false
+      minor: false
 
