--- a/deploy/olm-catalog/activemq-artemis-operator/activemq-artemis.package.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/activemq-artemis.package.yaml
@@ -2,8 +2,6 @@ packageName: activemq-artemis
 channels:
   - name: alpha
     currentCSV: activemq-artemis-operator.v0.9.1
-  - name: stable-75-on-z
-    currentCSV: activemq-artemis-operator.v0.10.0-on-z
-  - name: stable-76
-    currentCSV: activemq-artemis-operator.v0.12.0
-defaultChannel: stable-76
+  - name: current-76
+    currentCSV: activemq-artemis-operator.v0.13.0
+defaultChannel: current-76
