using new lts container image refs

--- a/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   deploymentPlan:
     size: 2
-    image: registry.redhat.io/amq7/amq-broker:7.4
+    image: registry.redhat.io/amq7/amq-broker-lts-rhel7:7.4
     requireLogin: false
     persistenceEnabled: false
     journalType: nio
