--- a/deploy/examples/artemis-ssl-persistence-cluster-deployment.yaml
+++ b/deploy/examples/artemis-ssl-persistence-cluster-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   deploymentPlan:
     size: 2
-    image: registry.redhat.io/amq7/amq-broker:7.4
+    image: registry.redhat.io/amq7/amq-broker-lts-rhel7:7.4
     persistenceEnabled: true
     messageMigration: true
   acceptors:
