--- a/deploy/crds/broker_activemqartemisaddress_crd.yaml
+++ b/deploy/crds/broker_activemqartemisaddress_crd.yaml
@@ -1,47 +1,52 @@
+﻿kind: CustomResourceDefinition
 apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
   name: activemqartemisaddresses.broker.amq.io
 spec:
-  group: broker.amq.io
+  subresources:
+    status: {}
   names:
-    kind: ActiveMQArtemisAddress
-    listKind: ActiveMQArtemisAddressList
     plural: activemqartemisaddresses
     singular: activemqartemisaddress
+    kind: ActiveMQArtemisAddress
+    listKind: ActiveMQArtemisAddressList
   scope: Namespaced
+  conversion:
+    strategy: None
+  preserveUnknownFields: true
   version: v2alpha1
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          type: string
+        kind:
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: object
+          required:
+            - addressName
+            - queueName
+            - routingType
+          properties:
+            addressName:
+              type: string
+            queueName:
+              type: string
+            routingType:
+              type: string
+        status:
+          type: object
   versions:
     - name: v2alpha1
       served: true
       storage: true
-      schema:
-        openAPIV3Schema:
-          properties:
-            apiVersion:
-              type: string
-            kind:
-              type: string
-            metadata:
-              type: object
-            spec:
-              properties:
-                addressName:
-                  type: string
-                queueName:
-                  type: string
-                routingType:
-                  type: string
-              required:
-                - addressName
-                - queueName
-                - routingType
-              type: object
-            status:
-              type: object
     - name: v1alpha2
-      served: false 
+      served: true
       storage: false
-  subresources:
-    status: {}
+    - name: v1alpha1
+      served: false
+      storage: false
+  group: broker.amq.io
