ENTMQBR-3222: Switched reveresed prefix usage.

--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -27,8 +27,8 @@ spec:
       sslProvider: JDK
       sniHost: localhost
       expose: true
-      anycastPrefix: jms.topic.
-      multicastPrefix: /queue/
+      anycastPrefix: jms.queue.
+      multicastPrefix: /topic/
   connectors:
     - name: connector0
       host: localhost
