ENTMQBR-3645: Updated csv to include latest operator env vars and updated operator yaml.

--- a/deploy/olm-catalog/activemq-artemis-operator/0.15.0/activemq-artemis-operator.v0.15.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.15.0/activemq-artemis-operator.v0.15.0.clusterserviceversion.yaml
@@ -536,6 +536,11 @@ spec:
             selector:
               matchLabels:
                 name: activemq-artemis-operator
+            strategy:
+              rollingUpdate:
+                maxSurge: 1
+                maxUnavailable: 1
+              type: RollingUpdate
             template:
               metadata:
                 labels:
@@ -545,17 +550,31 @@ spec:
                 containers:
                   - name: activemq-artemis-operator
                     image: quay.io/artemiscloud/activemq-artemis-operator:0.15.0
+                    args:
+                      # Explicitly set the logging level.
+                      # Valid values are debug, info, and error
+                      # from most to least.
+                      # If running entrypoint_debug then use '-- --zap-level debug'
+                      - '--zap-level debug'
                     command:
-                      -  /home/activemq-artemis-operator/bin/entrypoint
+                      - /home/activemq-artemis-operator/bin/entrypoint
                     imagePullPolicy: Always
                     env:
-                      - name: WATCH_NAMESPACE
+                      - name: OPERATOR_NAME
                         valueFrom:
                           fieldRef:
-                            fieldPath: metadata.namespace
+                            fieldPath: metadata.labels['name']
                       - name: POD_NAME
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.name
-                      - name: OPERATOR_NAME
-                        value: "activemq-artemis-operator"
+                      - name: WATCH_NAMESPACE
+                        valueFrom:
+                          fieldRef:
+                            fieldPath: metadata.namespace
+                      - name: BROKER_IMAGE_211
+                        value: quay.io/artemiscloud/activemq-artemis-openshift-image:2.11
+                      - name: BROKER_IMAGE_212
+                        value: quay.io/artemiscloud/activemq-artemis-openshift-image:2.12
+                      - name: BROKER_IMAGE_213
+                        value: quay.io/artemiscloud/activemq-artemis-openshift-image:2.13
