ENTMQBR-3616: Updated broker cr example to remove weak and potentially incompatible ciphers.

--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -7,7 +7,7 @@ spec:
   version: 7.7.0
   deploymentPlan:
     size: 1
-    image: registry.redhat.io/amq7/amq-broker@sha256:ba5273b390a4762c21f005fdc92a837680417250dcd5e6d9d3c8f776e9cc372e
+    image: registry.redhat.io/amq7/amq-broker:7.7
     requireLogin: false
     persistenceEnabled: false
     journalType: nio
@@ -19,7 +19,6 @@ spec:
       protocols: amqp
       port: 5672
       sslEnabled: false
-      enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
       enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
       needClientAuth: true
       wantClientAuth: true
@@ -34,7 +33,6 @@ spec:
       host: localhost
       port: 22222
       sslEnabled: false
-      enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
       enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
       needClientAuth: true
       wantClientAuth: true
