--- a/deploy/catalog_resources/activemq-artemis-operatorsource.yaml
+++ b/deploy/catalog_resources/activemq-artemis-operatorsource.yaml
@@ -8,4 +8,4 @@ spec:
   endpoint: https://quay.io/cnr
   registryNamespace: artemiscloud
   displayName: "ActiveMQ Artemis Operator"
-  publisher: "Red Hat"
+  publisher: "Artemis Cloud"
