ENTMQBR-3723 Porting ENTMQBR-3137 to LTS Also ported ENTMQBR-3228 as a by-product

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -9,6 +9,7 @@ required = [
   "k8s.io/kube-openapi/cmd/openapi-gen",
   "k8s.io/gengo/args",
   "sigs.k8s.io/controller-tools/pkg/crd/generator",
+  "github.com/artemiscloud/activemq-artemis-management",
 ]
 
 [[override]]
