--- a/deploy/olm-catalog/activemq-artemis-operator/0.16.0/activemq-artemis-operator.v0.16.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.16.0/activemq-artemis-operator.v0.16.0.clusterserviceversion.yaml
@@ -57,6 +57,7 @@ metadata:
 labels:
   operator-activemqartemis: "true"
   operatorframework.io/arch.amd64: supported
+  operatorframework.io/os.linux: supported
 spec:
   displayName: ActiveMQ Artemis
   description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
