--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -39,13 +39,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: BROKER_IMAGE_760
-          value: registry.redhat.io/amq7/amq-broker:7.6
-        - name: BROKER_IMAGE_750
-          value: registry.redhat.io/amq7/amq-broker:7.5
-        - name: BROKER_IMAGE_770
-          value: registry.redhat.io/amq7/amq-broker:7.7
-        image: quay.io/artemiscloud/activemq-artemis-operator:0.15.0
+        - name: BROKER_IMAGE_211
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.1.0
+        - name: BROKER_IMAGE_212
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.1.0
+        - name: BROKER_IMAGE_213
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.1.0
+        image: quay.io/artemiscloud/activemq-artemis-operator:0.16.0
         imagePullPolicy: Always
         name: activemq-artemis-operator
         resources: {}
