--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -4,10 +4,10 @@ metadata:
   name: ex-aao
   application: ex-aao-app
 spec:
-  version: 7.7.0
+  version: 0.1.0
   deploymentPlan:
     size: 1
-    image: registry.redhat.io/amq7/amq-broker:7.7
+    image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.1.0
     requireLogin: false
     persistenceEnabled: false
     journalType: nio
