--- a/deploy/examples/artemis-cluster-deployment.yaml
+++ b/deploy/examples/artemis-cluster-deployment.yaml
@@ -5,4 +5,4 @@ metadata:
 spec:
   deploymentPlan:
     size: 2
-    image: quay.io/artemiscloud/activemq-artemis-operator:latest
+    image: quay.io/artemiscloud/activemq-artemis-operator:0.16.0
