--- a/deploy/olm-catalog/activemq-artemis-operator/0.16.0/activemq-artemis-operator.v0.16.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.16.0/activemq-artemis-operator.v0.16.0.clusterserviceversion.yaml
@@ -24,7 +24,7 @@ metadata:
           "spec": {
               "deploymentPlan": {
                   "size": 2,
-                  "image": "quay.io/artemiscloud activemq-artemis-broker-kubernetes:0.1.0",
+                  "image": "quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.1.0",
                   "requireLogin": false,
                   "persistenceEnabled": false,
                   "journalType": "nio",
