--- a/deploy/olm-catalog/activemq-artemis-operator/0.17.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.17.0/broker_activemqartemis_crd.yaml
@@ -516,6 +516,8 @@ spec:
                       type: integer
                       maximum: 16
                       minimum: 0
+                    storage:
+                      size: string
                     resources:
                       type: object
                       properties:
