--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -19,6 +19,8 @@ spec:
       requests:
         cpu: 250m
         memory: 512m
+    storage:
+      size: "4Gi"
   console:
     expose: true
   acceptors:
