ENTMQBR-4137: Updated capitalization and quotation to resolve issue.

--- a/deploy/examples/artemis-basic-resources-deployment.yaml
+++ b/deploy/examples/artemis-basic-resources-deployment.yaml
@@ -8,9 +8,9 @@ spec:
     image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
     resources:
       limits:
-        cpu: 500m
-        memory: 1024m
+        cpu: "500Mi"
+        memory: "1024Mi"
       requests:
-        cpu: 250m
-        memory: 512m
+        cpu: "250Mi"
+        memory: "512Mi"
 
