Allow users to config init image url Removed "Always" imagePullPolicy from init container spec Bump broker crd version v2alpha4 Fix error running on kubernetes (route not exist)

--- a/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
@@ -495,8 +495,8 @@ spec:
                     image:
                       description: The image used for the broker deployment
                       type: string
-                    initImage:
-                      description: The init container image used to configure broker
+                    initImage: The init container image used to configure broker addresssettings
+                      description:
                       type: string
                     journalType:
                       description: 'If aio use ASYNCIO, if nio use NIO for journal IO'
@@ -853,7 +853,7 @@ spec:
                             description: >-
                               The page size in bytes to use for an address. Supports byte notation like K, Mb,
                               GB, etc.
-                            type: integer
+                            type: string
                           pageMaxCacheSize:
                             description: Number of paging files to cache in memory to avoid IO during paging navigation
                             type: integer
