Fix deploy resources values
The resource abbreviation m denotes "Mili" and Mi denotes "Mega".
Specifying a very low value (e.g. 400m) instead of an appropriate
value (e.g. 400Mi) will lead to the FailedCreatePodSandBox error.

--- a/deploy/examples/artemis-basic-resources-deployment.yaml
+++ b/deploy/examples/artemis-basic-resources-deployment.yaml
@@ -8,9 +8,9 @@ spec:
     image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
     resources:
       limits:
-        cpu: "500Mi"
+        cpu: "500m"
         memory: "1024Mi"
       requests:
-        cpu: "250Mi"
+        cpu: "250m"
         memory: "512Mi"
 
