--- a/deploy/crs/broker_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_activemqartemis_cr.yaml
@@ -15,10 +15,10 @@ spec:
     resources:
       limits:
         cpu: 500m
-        memory: 1024m
+        memory: 1024Mi
       requests:
         cpu: 250m
-        memory: 512m
+        memory: 512Mi
     storage:
       size: "4Gi"
   console:
