ENTMQBR-4072 Operator broker crd v2alpha3 storage/size def not right Also missing quotes in 0.17.0 csv

--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -520,7 +520,11 @@ spec:
                       maximum: 16
                       minimum: 0
                     storage:
-                      size: string
+                      description: the storage capacity
+                      type: object
+                      properties:
+                        size:
+                          type: string
                     resources:
                       type: object
                       properties:
@@ -1078,7 +1082,11 @@ spec:
                       maximum: 16
                       minimum: 0
                     storage:
-                      size: string
+                      description: the storage capacity
+                      type: object
+                      properties:
+                        size:
+                          type: string
                     resources:
                       type: object
                       properties:
