--- a/deploy/olm-catalog/activemq-artemis-operator/0.17.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.17.0/broker_activemqartemis_crd.yaml
@@ -292,7 +292,7 @@ spec:
                             description: >-
                               The page size in bytes to use for an address. Supports byte notation like K, Mb,
                               GB, etc.
-                            type: integer
+                            type: string
                           pageMaxCacheSize:
                             description: Number of paging files to cache in memory to avoid IO during paging navigation
                             type: integer
@@ -517,7 +517,11 @@ spec:
                       maximum: 16
                       minimum: 0
                     storage:
-                      size: string
+                      description: the storage type
+                      type: object
+                      properties:
+                        size:
+                          type: string
                     resources:
                       type: object
                       properties:
