--- a/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
@@ -520,7 +520,11 @@ spec:
                       maximum: 16
                       minimum: 0
                     storage:
-                      size: string
+                      description: the storage capacity
+                      type: object
+                      properties:
+                        size:
+                          type: string
                     resources:
                       type: object
                       properties:
@@ -1078,7 +1082,11 @@ spec:
                       maximum: 16
                       minimum: 0
                     storage:
-                      size: string
+                      description: the storage capacity
+                      type: object
+                      properties:
+                        size:
+                          type: string
                     resources:
                       type: object
                       properties:
