--- a/deploy/olm-catalog/activemq-artemis-operator/0.18.0/activemq-artemis-operator.v0.18.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.18.0/activemq-artemis-operator.v0.18.0.clusterserviceversion.yaml
@@ -28,7 +28,9 @@ metadata:
                   "requireLogin": false,
                   "persistenceEnabled": false,
                   "journalType": "nio",
-                  "messageMigration": false
+                  "messageMigration": false,
+                  "jolokiaAgentEnabled": false,
+                  "managementRBACEnabled": true
               }
           }
       },
@@ -185,6 +187,18 @@ spec:
           - description: If true migrate messages on scaledown
             displayName: MessageMigration
             path: deploymentPlan.messageMigration
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: If true enable the Jolokia JVM Agent
+            displayName: JolokiaAgentEnabled
+            path: deploymentPlan.jolokiaAgentEnabled
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: If true enable the management role based access control
+            displayName: ManagementRBACEnabled
+            path: deploymentPlan.managementRBACEnabled
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
               - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
