--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,24 @@ jobs:
         run: go get github.com/onsi/ginkgo/ginkgo && $(go env GOPATH)/bin/ginkgo ./...
 
       - name: Build the image
-        run: docker build --file ./build/Dockerfile --label \"quay.expires-after=1w\" --label \"git-sha=$GITHUB_SHA\" --tag $IMAGE_NAME:latest .
+        run: docker build --file ./build/Dockerfile --label \"quay.expires-after=1w\" --label \"git-sha=$GITHUB_SHA\" --tag $IMAGE_NAME:dev.latest .
+
+      - name: Execute the test suite
+        uses: artemiscloud/activemq-artemis-operator-test-action@v1
+        with:
+          module: 'gitlab.cee.redhat.com/msgqe/openshift-broker-suite-golang'
+          repository: 'https://github.com/brusdev/activemq-artemis-operator-test-suite.git'
+          ref: 'fix_test_flags'
+          test-packages: 'test/smoke/basic/...'
+          docker-images: 'activemq-artemis-operator:dev.latest'
+          operator-image: 'activemq-artemis-operator:dev.latest'
 
       - name: Push the image
         if: ${{ github.event_name == 'push' }}
         run: >
           export IMAGE_TAG=dev.$(date +%Y%m%d).$(git rev-parse --short "$GITHUB_SHA") &&
           docker login quay.io --username=${{ secrets.QUAY_USERNAME }} --password-stdin <<< ${{ secrets.QUAY_PASSWORD }} &&
-          docker tag $IMAGE_NAME:latest quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:$IMAGE_TAG &&
+          docker tag $IMAGE_NAME:dev.latest quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:$IMAGE_TAG &&
           docker push quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:$IMAGE_TAG &&
-          docker tag $IMAGE_NAME:latest quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:dev.latest &&
+          docker tag $IMAGE_NAME:dev.latest quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:dev.latest &&
           docker push quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:dev.latest
