Fix malformat with initImage and move jolokia props to v2alpha4 in 0.18.0 csv

--- a/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.18.0/broker_activemqartemis_crd.yaml
@@ -492,15 +492,21 @@ spec:
                 deploymentPlan:
                   type: object
                   properties:
+                    jolokiaAgentEnabled:
+                      description: If true enable the Jolokia JVM Agent
+                      type: boolean
                     image:
                       description: The image used for the broker deployment
                       type: string
-                    initImage: The init container image used to configure broker addresssettings
-                      description:
+                    initImage:
+                      description: The init container image used to configure broker addresssettings
                       type: string
                     journalType:
                       description: 'If aio use ASYNCIO, if nio use NIO for journal IO'
                       type: string
+                    managementRBACEnabled:
+                      description: If true enable the management role based access control
+                      type: boolean
                     messageMigration:
                       description: If true migrate messages on scaledown
                       type: boolean
@@ -1340,18 +1346,12 @@ spec:
                 deploymentPlan:
                   type: object
                   properties:
-                    jolokiaAgentEnabled:
-                      description: If true enable the Jolokia JVM Agent
-                      type: boolean
                     image:
                       description: The image used for the broker deployment
                       type: string
                     journalType:
                       description: 'If aio use ASYNCIO, if nio use NIO for journal IO'
                       type: string
-                    managementRBACEnabled:
-                      description: If true enable the management role based access control
-                      type: boolean
                     messageMigration:
                       description: If true migrate messages on scaledown
                       type: boolean
