ENTMQBR-3703 / ENTMQBR-3724 / bz1868714 CSV label misposition

--- a/deploy/olm-catalog/activemq-artemis-operator/0.18.0/activemq-artemis-operator.v0.18.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.18.0/activemq-artemis-operator.v0.18.0.clusterserviceversion.yaml
@@ -3,6 +3,11 @@ kind: ClusterServiceVersion
 metadata:
   name: activemq-artemis-operator.v0.18.0
   namespace: placeholder
+  labels:
+    operator-activemqartemis: "true"
+    operatorframework.io/os.linux: supported
+    operatorframework.io/arch.amd64": supported
+    operatorframework.io/arch.s390x": supported
   annotations:
     categories: "Streaming & Messaging"
     certified: "false"
@@ -56,10 +61,6 @@ metadata:
               "localOnly": "true"
           }
       }]
-labels:
-  operator-activemqartemis: "true"
-  operatorframework.io/arch.amd64: supported
-  operatorframework.io/os.linux: supported
 spec:
   displayName: ActiveMQ Artemis
   description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
