ENTMQBR-4413: 0.19.0 prep with ubi8 and better version control via env vars

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -40,13 +40,35 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: BROKER_IMAGE_211
+
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2150
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.2
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2160
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.3
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
-        - name: BROKER_IMAGE_212
-          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
-        - name: BROKER_IMAGE_213
-          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
-        image: quay.io/artemiscloud/activemq-artemis-operator:0.18.1
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.1
+
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2150_ppc64le
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2160_ppc64le
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150_ppc64le
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes-openj9-11-rhel8:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160_ppc64le
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes-openj9-11-rhel8:dev.latest
+
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2150_s390x
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2160_s390x
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150_s390x
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes-openj9-11-rhel8:dev.latest
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160_s390x
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes-openj9-11-rhel8:dev.latest
+
+        image: quay.io/artemiscloud/activemq-artemis-operator:dev.latest
         imagePullPolicy: Always
         name: activemq-artemis-operator
         resources: {}
