Issue #67 Adding extra mounts for user specified secrets and configmaps ENTMQBR-4637 Provide optional secret/cofigmap in the Custom Resource

--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
@@ -558,7 +558,7 @@ spec:
                           items:
                             type: string
                         secrets:
-                          description: List of secrets to mount
+                          description: List of configmaps to mount
                           type: array
                           items:
                             type: string
