--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -41,7 +41,7 @@ metadata:
           }
       },
       {
-          "apiVersion": "broker.amq.io/v2alpha2",
+          "apiVersion": "broker.amq.io/v2alpha3",
           "kind": "ActiveMQArtemisAddress",
           "metadata": {
               "name": "ex-aaoaddress"
@@ -831,11 +831,14 @@ spec:
               - "urn:alm:descriptor:com.tectonic.ui:podStatuses"
 
       - name: activemqartemisaddresses.broker.amq.io
-        version: v2alpha2
+        version: v2alpha3
         versions:
-          - name: v2alpha2
+          - name: v2alpha3
             served: true
             storage: true
+          - name: v2alpha2
+            served: true
+            storage: false
           - name: v2alpha1
             served: true
             storage: false
@@ -870,6 +873,12 @@ spec:
           - description: Whether or not delete the queue from broker when CR is undeployed(default false)
             displayName: Remove From Broker On Delete
             path: removeFromBrokerOnDelete
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:ActiveMQArtemis'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Apply to the broker crs in the current namespace. A value of * or empty string means applying to all broker crs. Default apply to all broker crs
+            displayName: Apply to Broker CR Names
+            path: applyToCrNames[0]:
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:ActiveMQArtemis'
               - 'urn:alm:descriptor:com.tectonic.ui:text'
